add some stuff, delete some stuff, it's still not working

--- a/index.html
+++ b/index.html
@@ -4,25 +4,21 @@
         <link href="css/styles.css" rel="stylesheet" type="text/css">
         <script src="js/jquery-1.11.3.js"></script>
         <script src="js/scripts.js"></script>
-        <title>Roman Numerals</title>
+        <title>Tic Tac Toe</title>
     </head>
     <body>
 
         <div class="container">
-            <h1>Roman Numerals</h1>
-
-            <form id="romanNumeral">
-                <div class="form-group">
-                    <label for="regNumber">Enter number to convert:</label>
-                    <input id="regNumber" type="text">
-                    <br>
-                </div>
-
-                <button type="submit" class="btn">Find out!</button>
-            </form>
-
-            <div id="result">
-                <p> <span class="result"></span></p>
+            <h1>Tic Tac Toe!</h1>
+            <div class="game">
+                <a href="" class="getValue" value="0"><div class ="square r-border b-border" value="0"></div></a>
+                <a href="" class="getValue" value="1"><div class ="square r-border b-border" value="1"></div></a>
+                <div class ="square b-border" id="2"></div>
+                <div class ="square r-border b-border" id="4"></div>
+                <div class ="square b-border" id="5"></div>
+                <div class ="square r-border" id="6"></div>
+                <div class ="square r-border" id="7"></div>
+                <div class ="square" id="8"></div>
             </div>
         </div>
 
