div squares working with x,o

--- a/index.html
+++ b/index.html
@@ -2,25 +2,53 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link href="css/styles.css" rel="stylesheet" type="text/css">
-        <script src="js/jquery-1.11.3.js"></script>
-        <script src="js/scripts.js"></script>
         <title>Tic Tac Toe</title>
     </head>
     <body>
 
         <div class="container">
-            <h1>Tic Tac Toe!</h1>
+            <h1>Tic Tac Toe!    </h1>
             <div class="game">
-                <a href="" class="getValue" value="0"><div class ="square r-border b-border" value="0"></div></a>
-                <a href="" class="getValue" value="1"><div class ="square r-border b-border" value="1"></div></a>
-                <div class ="square b-border" id="2"></div>
-                <div class ="square r-border b-border" id="4"></div>
-                <div class ="square b-border" id="5"></div>
-                <div class ="square r-border" id="6"></div>
-                <div class ="square r-border" id="7"></div>
-                <div class ="square" id="8"></div>
+                <div class ="square r-border b-border" id="0">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square r-border b-border" id="1">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square b-border" id="2">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square r-border b-border" id="3">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square r-border b-border" id="4">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square b-border" id="5">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square r-border" id="6">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square r-border" id="7">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
+                <div class ="square" id="8">
+                  <span class="markX" id="X">X</span>
+                  <span class="markO" id="O">O</span>
+                </div>
             </div>
         </div>
 
+        <script src="js/jquery-1.11.3.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
