get x and o to appear on screen

--- a/index.html
+++ b/index.html
@@ -7,41 +7,49 @@
     <body>
 
         <div class="container">
-            <h1>Tic Tac Toe!    </h1>
+            <button style="font-size:300%; id:start-game">Play Tic Tac Toe!</button>
+            <div id="game-over-X-win">
+              <h2>Game Over! Player X wins!</h2>
+            </div>
+            <div id="game-over-O-win">
+              <h2>Game Over! Player O wins!</h2>
+            </div>
+            <h3 id="playerX">Player "X", pick a square!</h3>
+            <h3 id="playerO">Player "O", pick a square!</h3>
             <div class="game">
-                <div class ="square r-border b-border" id="0">
+                <div class ="square r-border b-border" id="_0">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square r-border b-border" id="1">
+                <div class ="square r-border b-border" id="_1">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square b-border" id="2">
+                <div class ="square b-border" id="_2">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square r-border b-border" id="3">
+                <div class ="square r-border b-border" id="_3">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square r-border b-border" id="4">
+                <div class ="square r-border b-border" id="_4">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square b-border" id="5">
+                <div class ="square b-border" id="_5">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square r-border" id="6">
+                <div class ="square r-border" id="_6">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square r-border" id="7">
+                <div class ="square r-border" id="_7">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
-                <div class ="square" id="8">
+                <div class ="square" id="_8">
                   <span class="markX" id="X">X</span>
                   <span class="markO" id="O">O</span>
                 </div>
