add player title switch

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <body>
 
         <div class="container">
-            <button style="font-size:300%; id:start-game">Play Tic Tac Toe!</button>
-            <div id="game-over-X-win">
+            <!-- <div id="game-over-X-win">
               <h2>Game Over! Player X wins!</h2>
             </div>
             <div id="game-over-O-win">
               <h2>Game Over! Player O wins!</h2>
-            </div>
+            </div> -->
+            <button style="font-size:300%; id:start-game">Play Tic Tac Toe!</button>
             <h3 id="playerX">Player "X", pick a square!</h3>
             <h3 id="playerO">Player "O", pick a square!</h3>
             <div class="game">
